--- a/color-palettes.html
+++ b/color-palettes.html
@@ -1,7 +1,7 @@
 <style>
 body{font-family:-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Oxygen-Sans","Ubuntu","Cantarell","Helvetica Neue",sans-serif;font-size:16px;margin:0;}
 *{-moz-box-sizing: border-box;-webkit-box-sizing: border-box;box-sizing: border-box;}
-.col-list{overflow:hidden;}
+.col-list{overflow:hidden;width:100%}
 .col-list .col-1, .col-list .col-2, .col-list .col-3 {
     display: -ms-flexbox;
     display: flex;
