--- a/color-palettes.html
+++ b/color-palettes.html
@@ -23,7 +23,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Oxygen-Sa
 .col-list div.figure, .col-list div.module, .multi-up .tile {
     padding: 0 40px 0 0;
 }
-	.color-palettes a:link{font-size:75%;padding:10px;text-decoration:none;font-weight:600;}
+	.color-palettes a:link{font-size:75%;padding:10px 20px;text-decoration:none;font-weight:600;}
 .color-tag {
     border: 1px solid rgba(0,0,0,.12);
     padding: 10px 15px 11px;
