--- a/parse-html.html
+++ b/parse-html.html
@@ -28,7 +28,7 @@ body {
 .btn-xs{font-size:12px;line-height:1.5;border-radius:3px;padding:1px 5px}
 #parser2 textarea#somewhere{background:#f8f8f8;border:1px solid #ccc;height:300px;width:100%;padding:10px;margin:0 0 10px;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;font-family:Consolas,Monaco,'Andale Mono',monospace;color:#111}
 #parser2 textarea#somewhere:active,#parser2 textarea#somewhere:focus{border:2px solid #e8554e;outline:0}
-.parse-html {margin:0;padding:10px 20px;}
+.parse-html {text-align:right;margin:0;padding:10px 20px;}
 	.parse-html a:link{color:#000;font-size:75%;text-decoration:none;font-weight:600;}
 	.parse-html a:hover{color:#000;}
 .btn-sm{font-size:12px;line-height:1.5;border-radius:3px;padding:5px 10px}
