--- a/color-palettes.html
+++ b/color-palettes.html
@@ -23,7 +23,7 @@ body{font-family:-apple-system,BlinkMacSystemFont,"Roboto","Segoe UI","Oxygen-Sa
 .col-list div.figure, .col-list div.module, .multi-up .tile {
     padding: 0 40px 0 0;
 }
-	.color-palettes {margin:0;padding:10px 20px;}
+	.color-palettes {text-align:right;margin:0;padding:10px 20px;}
 	.color-palettes a:link{color:#000000;font-size:75%;text-decoration:none;font-weight:600;}
 	.color-palettes a:hover{color:#000000;}
 .color-tag {
