--- a/html-live-editor.html
+++ b/html-live-editor.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no" />
   <title>DUIPEE: HTML Live Editor</title>
 
-  <meta name="description" content="Test your JavaScript, CSS, HTML or CoffeeScript online with Kompi Ajaib: HTML Live Editor." />
+  <meta name="description" content="Test your JavaScript, CSS, HTML or CoffeeScript online with DUIPEE: HTML Live Editor." />
   <meta name="keywords" content="online javascript editor, testing javascript online, online code playground, online code editor, html, css, javascript" />
 <style>
 
@@ -49,7 +49,7 @@
         <button class="btn" id="liveEdit" title="Toggle Live Edit Mode">LiveEdit</button>
       </div><!--
       --><div class="column-33">
-        <h1>Kompi Ajaib: HTML Live Editor</h1>
+        <h1>DUIPEE: HTML Live Editor</h1>
       </div><!--
       --><div class="column-33 btnGroup last">
         <button class="btn" id="previewToggle" title="Enlarge Preview">Preview</button>
