--- a/youtube-thumbnail-generator.html
+++ b/youtube-thumbnail-generator.html
@@ -2,17 +2,17 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Youtube Thumbnail Generator - by kompiajaib</title>
+<title>Youtube Thumbnail Generator - by Duipee</title>
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/KompiAjaib/ytg/master/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/KompiAjaib/ytg/master/css/style.css">
 </head>
 <body>
 <div id="page_content">
 <h1>Youtube Thumbnail Generator</h1>
-<p>By <a href="http://www.kompiajaib.com/" title="Kompi Ajaib">KompiAjaib</a></p>
+<p>By <a href="http://www.kompiajaib.com/" title="Kompi Ajaib">Duipee</a></p>
   <form>
     <div class="form-group">
-        <label for="videoID" class="example">Youtube Video ID example: <span class="ex-text">https://www.youtube.com/watch?v=</span><b>anMYu17aZT4</b></label>
+        <label for="videoID" class="example">Youtube Video ID example: <span class="ex-text">https://www.youtube.com/watch?v=</span><b>tgRerMJ-mJg</b></label>
         <input type="text" class="form-control" id="videoID" placeholder="Put Youtube Video ID Here" />
     </div>
 </form>
@@ -25,7 +25,7 @@
 
 </div>
 <div class="footer">
-Credit to <a href="https://www.binarymoon.co.uk/" target="_blank" rel="nofollow">Binary Moon</a>
+Credit to <a href="https://duipee.blogspot.com" target="_blank" title="AMP Blogspot Tools">Duipee</a>
 </div>
 </div>
 <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js'></script>
