--- a/Color-Picker.html
+++ b/Color-Picker.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html">
   <title>Color Picker Input with jQuery - Template Monster</title>
   <meta name="author" content="Jake Rocheleau">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+ <meta content='width=device-width, initial-scale=1' name='viewport'>
   <link rel="shortcut icon" href="http://www.templatemonster.com/favicon.ico">
   <link rel="icon" href="http://www.templatemonster.com/favicon.ico">
 
@@ -13,6 +13,11 @@
   <script type="text/javascript" src="https://cdn.rawgit.com/duipee/js/2351b003/jquery.minicolors.min.js"></script>
 
 <style>
+	body {
+  background-color:transparent;
+  margin:0;
+  padding:0;
+}
 	/*!
  * Bootstrap v3.0.0
  *
