--- a/Color-Picker.html
+++ b/Color-Picker.html
@@ -9,8 +9,7 @@
   <link rel="shortcut icon" href="http://www.templatemonster.com/favicon.ico">
   <link rel="icon" href="http://www.templatemonster.com/favicon.ico">
   <link rel="stylesheet" type="text/css" media="all" href="https://cdn.rawgit.com/duipee/css/98b045e4/bootstrap.min.css">
-	
-	<link href="https://cdn.rawgit.com/duipee/css/56f75647/jquery.minicolors.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" media="all" href="https://cdn.rawgit.com/duipee/css/56f75647/jquery.minicolors.css">
   <script type="text/javascript" src="https://cdn.rawgit.com/duipee/js/2351b003/jquery-1.10.2.min.js"></script>
   <script type="text/javascript" src="https://cdn.rawgit.com/duipee/js/2351b003/jquery.minicolors.min.js"></script>
 </head>
