--- a/CSS-Minifier.html
+++ b/CSS-Minifier.html
@@ -6,7 +6,7 @@
   <title>CSS Minifier</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style type="text/css">
-  body {width:100%;
+  body {max-width:100%;
   background-color:transparent;
   margin:0;
   padding:0;
