--- a/CSS-Minifier.html
+++ b/CSS-Minifier.html
@@ -6,9 +6,8 @@
   <title>CSS Minifier</title>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <style type="text/css">
-  body {
-  background-color:transparent;
-  margin:0;
+  body {width:95%;background-color:transparent;
+  margin:0 auto;
   padding:0;
 }
 
