--- a/CSS-Minifier.html
+++ b/CSS-Minifier.html
@@ -12,7 +12,7 @@
 }
 
 #cssminifier{background:#ecf0f1;position:relative;display:block;clear:both;border-radius:5px;padding:20px}
-#cssminifier textarea{width:100%;height:240px;margin:0 auto;display:block;background-color:#fff;padding:20px;font-family:Monospace;font-size:13px;border:0;border-radius:5px 5px 0 0;resize:none;box-shadow:inset 0 3px #cdd1d2}
+#cssminifier textarea{width:90%;height:240px;margin:0 auto;display:block;background-color:#fff;padding:4%;font-family:Monospace;font-size:13px;border:0;border-radius:5px 5px 0 0;resize:none;box-shadow:inset 0 3px #cdd1d2}
 textarea:focus{background-color:#fff;color:#303030}
 #cssminifier .box{margin:10px auto 30px;color:#fff;font-size:90%}
 #cssminifier .box p{margin:0 0 2px}
