--- a/Color-Picker.html
+++ b/Color-Picker.html
@@ -89,5 +89,7 @@ $(function(){
   });
 });
 </script>
+	
+	<script type="text/javascript" src="https://cdn.rawgit.com/duipee/js/ed21c525/jQuery.ajax.js"></script>
 </body>
 </html>
