--- a/color-palettes.html
+++ b/color-palettes.html
@@ -1372,7 +1372,7 @@ hr {
 </div></div><div class="module off"></div></section></div>
 <script type="text/javascript" src="https://cdn.rawgit.com/duipee/js/ed21c525/jQuery.ajax.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src='https://cdn.rawgit.com/zenorocha/clipboard.js/v1.5.16/dist/clipboard.min.js'></script>   
+<script src='https://cdn.rawgit.com/duipee/js/139ebf14/clipboard.min.js'></script>   
 <script>
 var clipboard=new Clipboard('.hex');clipboard.on('success',function(e){e.clearSelection();showTooltip(e.trigger,'Copied!');});clipboard.on('error',function(e){showTooltip(e.trigger,fallbackMessage(e.action));});
 var btns=document.querySelectorAll('.hex');for(var i=0;i<btns.length;i++){btns[i].addEventListener('mouseleave',clearTooltip);btns[i].addEventListener('blur',clearTooltip);}
