--- a/amp-validator.html
+++ b/amp-validator.html
@@ -6,8 +6,8 @@
     <title></title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="https://technicalseo.com/resources/css/font-awesome-animation.min.css">
-    <link rel="stylesheet" href="https://technicalseo.com/resources/tools/style.css">
+	<link rel="stylesheet" href="https://cdn.rawgit.com/duipee/css/07cb2bd5/font-awesome-animation.min.css">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/duipee/css/df8bfa59/style.css">
 	<style>
 		.table>thead>tr>th,.table>thead>tr>td{
 			border-top: none !important;
@@ -107,7 +107,7 @@
   </head>
   <body>
     <div class="container">
-		<img id="loading" class="hide" src="https://technicalseo.com/resources/tools/loader-search.gif" width="128px" style="position:absolute;top:30px;left:50%;margin-left:-64px;z-index:999">
+		<img id="loading" class="hide" src="https://4.bp.blogspot.com/-1Qwg7Nm2hEI/W2wH-KT1onI/AAAAAAAAJN0/VcG3WSLjjvorIIDN3eqUAduT3nZ98h6kACLcBGAs/s1600/loader-search.gif" width="128px" style="position:absolute;top:30px;left:50%;margin-left:-64px;z-index:999">
 
 			<div class="row">
 		<form action="" method="post">
@@ -225,8 +225,8 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script src="https://technicalseo.com/resources/tools/iframeResizer.contentWindow.min.js"></script>
-	<script src="https://technicalseo.com/resources/tools/table-excel.js"></script>
+	<script src="https://cdn.rawgit.com/duipee/js/1304dfbd/iframeResizer.contentWindow.min.js"></script>
+	<script src="https://cdn.rawgit.com/duipee/js/1304dfbd/table-excel.js"></script>
 	<script>
 	$("#url_submit").click(function(){
 		$("#loading").removeClass('hide');
