--- a/amp-validator.html
+++ b/amp-validator.html
@@ -225,7 +225,7 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script src="https://cdn.rawgit.com/duipee/js/1304dfbd/iframeResizer.contentWindow.min.js"></script>
+	<script src="https://technicalseo.com/resources/tools/iframeResizer.contentWindow.min.js"></script>
 	<script src="https://cdn.rawgit.com/duipee/js/1304dfbd/table-excel.js"></script>
 	<script>
 	$("#url_submit").click(function(){
