--- a/amp-validator.html
+++ b/amp-validator.html
@@ -225,7 +225,7 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/js/bootstrap.min.js"></script>
-	<script src="https://technicalseo.com/resources/tools/iframeResizer.contentWindow.min.js"></script>
+	<script src="https://cdn.rawgit.com/duipee/js/1304dfbd/iframeResizer.contentWindow.min.js"></script>
 	<script src="https://cdn.rawgit.com/duipee/js/1304dfbd/table-excel.js"></script>
 	<script>
 	$("#url_submit").click(function(){
@@ -236,5 +236,35 @@
 	})	
 	</script>
 	
+	  
+	  
+	  <script type="text/javascript" src="https://technicalseo.com/resources/tools/iframeResizer.min.js"></script> 
+<script type="text/javascript">
+ iFrameResize({
+  log                     : true,                  // Enable console logging
+  enablePublicMethods     : true,                  // Enable methods within iframe hosted page
+  resizedCallback         : function(messageData){ // Callback fn when resize is received
+   $('p#callback').html(
+    '<b>Frame ID:</b> '    + messageData.iframe.id +
+    ' <b>Height:</b> '     + messageData.height +
+    ' <b>Width:</b> '      + messageData.width + 
+    ' <b>Event type:</b> ' + messageData.type
+   );
+  },
+  messageCallback         : function(messageData){ // Callback fn when message is received
+   $('p#callback').html(
+    '<b>Frame ID:</b> '    + messageData.iframe.id +
+    ' <b>Message:</b> '    + messageData.message
+   );
+   alert(messageData.message);
+  },
+  closedCallback         : function(id){ // Callback fn when iFrame is closed
+   $('p#callback').html(
+    '<b>IFrame (</b>'    + id +
+    '<b>) removed from page.</b>'
+   );
+  }
+ });
+</script>
   </body>
 </html>
