--- a/Validator-AMP-Blogspot.html
+++ b/Validator-AMP-Blogspot.html
@@ -10,7 +10,7 @@
 
 <iframe id="frame" src="https://cdn.rawgit.com/duipee/amp/149385b2/amp-validator.html" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
 <br>
- 
+ <script src="https://technicalseo.com/resources/tools/iframeResizer.min.js"></script>
 <script type="text/javascript">
 	iFrameResize({
 		log                     : true,                  // Enable console logging
