--- a/Validator-AMP-Blogspot.html
+++ b/Validator-AMP-Blogspot.html
@@ -8,9 +8,9 @@
  </head>
   <body>
 
-<iframe id="frame" src="https://cdn.rawgit.com/duipee/amp/f9941ef6/amp-script-3.0.php" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
+<iframe id="frame" src="https://cdn.rawgit.com/duipee/amp/73703130/amp-validator.html" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
 <br>
-<script src="https://technicalseo.com/resources/tools/iframeResizer.min.js"></script>
+<script src="https://cdn.rawgit.com/duipee/js/4db9cfe1/iframeResizer.min.js"></script>
 <script type="text/javascript">
 	iFrameResize({
 		log                     : true,                  // Enable console logging
