--- a/Validator-AMP-Blogspot.html
+++ b/Validator-AMP-Blogspot.html
@@ -4,13 +4,13 @@
     <meta name="robots" content="noindex,nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>Validator AMP Blogspot</title>
-<script src="https://cdn.rawgit.com/duipee/js/4db9cfe1/iframeResizer.min.js"></script>
+
  </head>
   <body>
 
-<iframe id="frame" src="https://cdn.rawgit.com/duipee/amp/73703130/amp-validator.html" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
+<iframe src="https://cdn.rawgit.com/duipee/amp/800b3deb/amp-validator.html" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
 <br>
-
+<script src="https://cdn.rawgit.com/duipee/js/4db9cfe1/iframeResizer.min.js"></script>
 <script type="text/javascript">
 	iFrameResize({
 		log                     : true,                  // Enable console logging
