--- a/Validator-AMP-Blogspot.html
+++ b/Validator-AMP-Blogspot.html
@@ -8,36 +8,41 @@
  </head>
   <body>
 
-<iframe src="https://cdn.rawgit.com/duipee/amp/800b3deb/amp-validator.html" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
+<hr>
 <br>
-<script src="https://cdn.rawgit.com/duipee/js/4db9cfe1/iframeResizer.min.js"></script>
+<iframe id="frame" src="https://technicalseo.com/seo-tools/amp/amp-script-3.0.php" width="100%" frameborder="0" scrolling="no" style="min-height:200px"></iframe>
+<br>
+<hr>
+
+
+<script type="text/javascript" src="https://technicalseo.com/resources/tools/iframeResizer.min.js"></script> 
 <script type="text/javascript">
-	iFrameResize({
-		log                     : true,                  // Enable console logging
-		enablePublicMethods     : true,                  // Enable methods within iframe hosted page
-		resizedCallback         : function(messageData){ // Callback fn when resize is received
-			$('p#callback').html(
-				'<b>Frame ID:</b> '    + messageData.iframe.id +
-				' <b>Height:</b> '     + messageData.height +
-				' <b>Width:</b> '      + messageData.width + 
-				' <b>Event type:</b> ' + messageData.type
-			);
-		},
-		messageCallback         : function(messageData){ // Callback fn when message is received
-			$('p#callback').html(
-				'<b>Frame ID:</b> '    + messageData.iframe.id +
-				' <b>Message:</b> '    + messageData.message
-			);
-			alert(messageData.message);
-		},
-		closedCallback         : function(id){ // Callback fn when iFrame is closed
-			$('p#callback').html(
-				'<b>IFrame (</b>'    + id +
-				'<b>) removed from page.</b>'
-			);
-		}
-	});
-</script>	
+ iFrameResize({
+  log                     : true,                  // Enable console logging
+  enablePublicMethods     : true,                  // Enable methods within iframe hosted page
+  resizedCallback         : function(messageData){ // Callback fn when resize is received
+   $('p#callback').html(
+    '<b>Frame ID:</b> '    + messageData.iframe.id +
+    ' <b>Height:</b> '     + messageData.height +
+    ' <b>Width:</b> '      + messageData.width + 
+    ' <b>Event type:</b> ' + messageData.type
+   );
+  },
+  messageCallback         : function(messageData){ // Callback fn when message is received
+   $('p#callback').html(
+    '<b>Frame ID:</b> '    + messageData.iframe.id +
+    ' <b>Message:</b> '    + messageData.message
+   );
+   alert(messageData.message);
+  },
+  closedCallback         : function(id){ // Callback fn when iFrame is closed
+   $('p#callback').html(
+    '<b>IFrame (</b>'    + id +
+    '<b>) removed from page.</b>'
+   );
+  }
+ });
+</script> 	
 
  </body>
 </html>
