--- a/ping-multiple-urls-online.html
+++ b/ping-multiple-urls-online.html
@@ -35,7 +35,10 @@ function escapeHtml(text) {
 
 </head>
 <body>
-
+    <div class="container-fluid">
+    	<div class="container">
+        	<!-- Content Section -->
+		
                    <div class="col-xs-12 form">
                 <div class="text-sec">
      <div class="col-sm-8" style="margin:0 auto; float:none;">
@@ -115,7 +118,7 @@ GOOGLE ADS
                 </div>
             </div>
 
-
+<!--./Content Section -->
           
             <style>
     #resultsTable th {
@@ -379,7 +382,7 @@ $(function(){
 
 </script>
 
-
+	    </div></div>
 
 <script>
 function windowPopup(url, width, height) {
