--- a/ping-multiple-urls-online.html
+++ b/ping-multiple-urls-online.html
@@ -143,7 +143,7 @@ GOOGLE ADS
    </style>
             
             <!-- Result Section --->
-            <div class="plg-res" id="ressultSec" style="display:none;">
+            <div class="plg-res" id="ressultSec">
     <span class="sub-heading feature-tab">Results:</span>
                 <span class="line"></span>
                 <div class="col-sm-12 noP" >
