--- a/house-cleaning.html
+++ b/house-cleaning.html
@@ -14,6 +14,9 @@
    -webkit-column-count: 2;
     -moz-column-count: 2;
     column-count: 2;
+      -webkit-column-gap: 5px; /* Chrome, Safari, Opera */
+    -moz-column-gap: 5px; /* Firefox */
+    column-gap: 5px;
 }
 @media (max-width: 500px) {
 .bagidua
